# OpenGL_Course

./: CMakeLists.txt  Camera.cpp  Camera.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  Material.cpp  Material.h  Shader.cpp  Shader.h  fragment.glsl  main.cpp  vertex.glsl
